--- a/src/Website/components/Includes/Footer/index.scss
+++ b/src/Website/components/Includes/Footer/index.scss
@@ -11,7 +11,9 @@ footer{
 
 .footer-distributed{
   //background-color: #2c292f;
-  background-color: #171d2f;
+  //background-color: #171d2f;
+  //background-color: #066d0a;
+  background-color: #d95f4a;
   //background-color: #5158a9;
   box-sizing: border-box;
   width: 100%;
@@ -48,7 +50,7 @@ footer{
 }
 
 .footer-distributed h3 span{
-  color:  #e0ac1c;
+  color:  #fbc02d;
 }
 
 /* Footer links */
@@ -66,7 +68,7 @@ footer{
 }
 
 .footer-distributed .footer-company-name{
-  color:  #8f9296;
+  color:  #fff;
   font-size: 14px;
   font-weight: normal;
   margin: 0;
@@ -80,7 +82,6 @@ footer{
 
 
 .footer-distributed .footer-center i{
-  background-color:  #33383b;
   color: #ffffff;
   font-size: 25px;
   width: 38px;
@@ -112,7 +113,7 @@ footer{
 }
 
 .footer-distributed .footer-center p a{
-  color:  #e0ac1c;
+  color:  #fbc02d;
   text-decoration: none;;
 }
 
@@ -125,7 +126,7 @@ footer{
 
 .footer-distributed .footer-company-about{
   line-height: 20px;
-  color:  #92999f;
+  color:  #fff;
   font-size: 13px;
   font-weight: normal;
   margin: 0;
@@ -148,14 +149,12 @@ footer{
   width: 35px;
   height: 35px;
   cursor: pointer;
-  background-color:  #33383b;
+  background-color:  #fff;
   border-radius: 2px;
-
   font-size: 20px;
   color: #ffffff;
   text-align: center;
-  line-height: 35px;
-
+  //line-height: 35px;
   margin-right: 3px;
   margin-bottom: 5px;
 }
